Add "org.gaul:modernizer-maven-plugin" build plug-in